kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ekart
  namespace: default
  labels:
    app: ekart
spec:
  type: LoadBalancer
  selector:
    app: ekart
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  sessionAffinity: None
